<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MarketApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_buy_car">BuyCarActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_activity_details_merchant">DetailsMerchantActivity</string>
    <string name="activity_details_news_goods_sorts">食物种类</string>
    <string name="activity_details_news_goods_hot">热门食物</string>
    <string name="activity_details_news_goods_recipe">健康食谱</string>
    <string name="activity_details_news_goods_screen">更多选择</string>
    <string name="activity_person_login">立即登陆</string>
    <string name="activity_person_all_bill">所有订单</string>
    <string name="activity_person_all_comment">待评价</string>
    <string name="activity_person_service">客服中心</string>
    <string name="activity_delivery_address_add">添加配送地址</string>
    <string name="activity_delivery_address">配送地址</string>
    <string name="activity_delivery_address_dinwei">重新定位</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="activity_register_forget_pass">忘记密码?</string>
    <string name="activity_register_message_login">短信验证登陆</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_delivery_address">DeliveryAddressActivity</string>
    <string name="title_activity_adress_add">AdressAddActivity</string>
    <string name="more_data">更多</string>
    <string name="load_more">加载更多</string>
    <string name="activity_address_person_name">收货人</string>
    <string name="activity_address_person_phone">手机号</string>
    <string name="activity_address_person_city">城&#160;&#160;&#160;&#160;市</string>
    <string name="activity_address_person_address">配送至</string>
    <string name="title_activity_person_details">PersonDetailsActivity</string>
    <string name="activity_persondetails_picture">我的头像</string>
    <string name="activity_persondetails_nickname">我的昵称</string>
    <string name="activity_persondetails_phone">手机</string>
    <string name="activity_persondetails_address">收货地址</string>
    <string name="title_activity_all_order">AllOrderActivity</string>
    <string name="title_activity_order_radio">OrderRadioActivity</string>

</resources>
