<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    >
	<include 
	    layout="@layout/common_tobar"
	    />
	<RelativeLayout
        android:id="@+id/activity_persondetails_rl_add"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_relative_click"
        android:clickable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:text="@string/activity_persondetails_picture" />

        <ImageView 
            android:id="@+id/activity_persondetails_iv_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/vegatable"
            android:layout_toLeftOf="@+id/activity_persondetails_iv_arrow"
            />
        <ImageView
            android:id="@+id/activity_persondetails_iv_arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/common_next_arrow" />
    </RelativeLayout>

	<RelativeLayout
	    android:id="@+id/activity_persondetails_rl_nickname"
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:layout_marginTop="1dp"
	    android:background="@drawable/common_relative_click"
	    android:clickable="true" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="35dp"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dp"
	        android:gravity="center"
	        android:text="@string/activity_persondetails_nickname"
	        android:textColor="@color/black"
	        android:textSize="14sp" />

	    <ImageView
	        android:layout_width="20dp"
	        android:layout_height="20dp"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="5dp"
	        android:src="@drawable/common_next_arrow" />
	</RelativeLayout>

	<RelativeLayout
        android:id="@+id/activity_persondetails_rl_sex"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/common_relative_click"
        android:clickable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:text="@string/activity_persondetails_phone" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/common_next_arrow" />
    </RelativeLayout>
	<RelativeLayout
        android:id="@+id/activity_persondetails_rl_address"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/common_relative_click"
        android:clickable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:text="@string/activity_persondetails_address" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/common_next_arrow" />
    </RelativeLayout>
	
</LinearLayout>
